Added calc functionality

--- a/lib/presentation/l10n/app_en.arb
+++ b/lib/presentation/l10n/app_en.arb
@@ -20,17 +20,36 @@
   "settingsAboutVersion": "Version",
   "settingsVersionUnknown": "Unknown",
   "settingsAboutAuthor": "Author",
-  "settingsAboutProjects": "Source code",
+  "settingsAboutSourceCode": "Source code",
   "settingsAboutTelegram": "Telegram",
   "settingsCopyAction": "Copy",
   "unitKilometers": "Kilometers",
   "unitMiles": "Miles",
+  "unitKilometersShort": "km",
+  "unitMilesShort": "mi",
+  "unitMetersShort": "m",
+  "unitHoursShort": "h",
   "languageEnglish": "English",
   "languageRussian": "Russian",
   "languageSystem": "System",
   "themeSystem": "System",
   "themeLight": "Light",
   "themeDark": "Dark",
+  "unitMinutesShort": "min",
+  "calculatorModeSprint": "Sprint",
+  "calculatorModeLong": "Stayer",
+  "calculatorDistances": "Distances",
+  "calculatorDistance": "Distance",
+  "calculatorPace": "Pace",
+  "calculatorSpeed": "Speed",
+  "calculatorTime": "Time",
+  "calculatorTimeFormat": "h:mm:ss",
+  "calculatorCancel": "Cancel",
+  "calculatorOk": "OK",
+  "calculatorSave": "Save",
+  "calculatorSavedCalculations": "Saved calculations",
+  "calculatorNoSaved": "No saved calculations yet",
+  "calculatorSprintMile": "1 mile",
   "calculatorPlaceholder": "Calculator tools will live here.",
   "notesPlaceholder": "Functionality is coming soon."
 }
