--- a/lib/presentation/l10n/app_ru.arb
+++ b/lib/presentation/l10n/app_ru.arb
@@ -25,12 +25,31 @@
   "settingsCopyAction": "Копировать",
   "unitKilometers": "Километры",
   "unitMiles": "Мили",
+  "unitKilometersShort": "км",
+  "unitMilesShort": "ми",
+  "unitMetersShort": "м",
+  "unitHoursShort": "ч",
   "languageEnglish": "Английский",
   "languageRussian": "Русский",
   "languageSystem": "Системный",
   "themeSystem": "Системная",
   "themeLight": "Светлая",
   "themeDark": "Темная",
+  "unitMinutesShort": "мин",
+  "calculatorModeSprint": "Спринт",
+  "calculatorModeLong": "Стайерские",
+  "calculatorDistances": "Дистанции",
+  "calculatorDistance": "Дистанция",
+  "calculatorPace": "Темп",
+  "calculatorSpeed": "Скорость",
+  "calculatorTime": "Время",
+  "calculatorTimeFormat": "ч:мин:сек",
+  "calculatorCancel": "Отмена",
+  "calculatorOk": "Ок",
+  "calculatorSave": "Сохранить",
+  "calculatorSavedCalculations": "Сохраненные расчеты",
+  "calculatorNoSaved": "Пока нет сохраненных расчетов",
+  "calculatorSprintMile": "1 миля",
   "calculatorPlaceholder": "Здесь появятся инструменты калькулятора.",
   "notesPlaceholder": "Скоро здесь появится функциональность."
 }
