Finished Calculator feature; Added docs for publishing

--- a/lib/presentation/l10n/app_en.arb
+++ b/lib/presentation/l10n/app_en.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "en",
-  "appTitle": "Pacenote",
+  "appTitle": "Racepace",
   "tabCalculator": "Calculator",
   "tabNotes": "Notes",
   "screenCalculator": "Calculator",
@@ -44,6 +44,32 @@
   "calculatorSpeed": "Speed",
   "calculatorTime": "Time",
   "calculatorTimeFormat": "h:mm:ss",
+  "calculatorInputWheel": "Wheel",
+  "calculatorInputKeyboard": "Keyboard",
+  "calculatorViewSplits": "View splits",
+  "splitsSettingsTitle": "Split settings",
+  "splitsIntervalTitle": "Split interval",
+  "splitsPaceStrategyTitle": "Pace strategy",
+  "splitsStartTimeTitle": "Start time",
+  "splitsStrategyNegative10": "Negative 10%",
+  "splitsStrategyNegative5": "Negative 5%",
+  "splitsStrategySteady": "Steady",
+  "splitsStrategyPositive5": "Positive 5%",
+  "splitsStrategyPositive10": "Positive 10%",
+  "splitsStrategyNegative10Description": "Start 5% slower, finish 5% faster.",
+  "splitsStrategyNegative5Description": "Start 2.5% slower, finish 2.5% faster.",
+  "splitsStrategySteadyDescription": "Even pace throughout.",
+  "splitsStrategyPositive5Description": "Start 2.5% faster, finish 2.5% slower.",
+  "splitsStrategyPositive10Description": "Start 5% faster, finish 5% slower.",
+  "splitsStrategyNegativeLabel": "Negative {percent}%",
+  "splitsStrategyPositiveLabel": "Positive {percent}%",
+  "splitsStrategyNegativeDescription": "Negative split. Start {percent}% slower, finish {percent}% faster.",
+  "splitsStrategyPositiveDescription": "Positive split. Start {percent}% faster, finish {percent}% slower.",
+  "splitsColumnIndex": "#",
+  "splitsColumnDistance": "Distance",
+  "splitsColumnPace": "Pace",
+  "splitsColumnFromZero": "Gun time",
+  "splitsColumnFromStart": "Chip time",
   "calculatorCancel": "Cancel",
   "calculatorOk": "OK",
   "calculatorSave": "Save",
