--- a/lib/presentation/l10n/app_ru.arb
+++ b/lib/presentation/l10n/app_ru.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "ru",
-  "appTitle": "Pacenote",
+  "appTitle": "Racepace",
   "tabCalculator": "Калькулятор",
   "tabNotes": "Заметки",
   "screenCalculator": "Калькулятор",
@@ -44,6 +44,32 @@
   "calculatorSpeed": "Скорость",
   "calculatorTime": "Время",
   "calculatorTimeFormat": "ч:мин:сек",
+  "calculatorInputWheel": "Колесо",
+  "calculatorInputKeyboard": "Клавиатура",
+  "calculatorViewSplits": "Показать сплиты",
+  "splitsSettingsTitle": "Настройки сплитов",
+  "splitsIntervalTitle": "Интервал",
+  "splitsPaceStrategyTitle": "Стратегия темпа",
+  "splitsStartTimeTitle": "Время старта",
+  "splitsStrategyNegative10": "Негатив 10%",
+  "splitsStrategyNegative5": "Негатив 5%",
+  "splitsStrategySteady": "Ровно",
+  "splitsStrategyPositive5": "Позитив 5%",
+  "splitsStrategyPositive10": "Позитив 10%",
+  "splitsStrategyNegative10Description": "Старт на 5% медленнее, финиш на 5% быстрее.",
+  "splitsStrategyNegative5Description": "Старт на 2.5% медленнее, финиш на 2.5% быстрее.",
+  "splitsStrategySteadyDescription": "Равномерный темп на всей дистанции.",
+  "splitsStrategyPositive5Description": "Старт на 2.5% быстрее, финиш на 2.5% медленнее.",
+  "splitsStrategyPositive10Description": "Старт на 5% быстрее, финиш на 5% медленнее.",
+  "splitsStrategyNegativeLabel": "Негатив {percent}%",
+  "splitsStrategyPositiveLabel": "Позитив {percent}%",
+  "splitsStrategyNegativeDescription": "Отрицательный сплит. Старт на {percent}% медленнее, финиш на {percent}% быстрее.",
+  "splitsStrategyPositiveDescription": "Положительный сплит. Старт на {percent}% быстрее, финиш на {percent}% медленнее.",
+  "splitsColumnIndex": "№",
+  "splitsColumnDistance": "Дистанция",
+  "splitsColumnPace": "Темп",
+  "splitsColumnFromZero": "От выстрела",
+  "splitsColumnFromStart": "От старта",
   "calculatorCancel": "Отмена",
   "calculatorOk": "Ок",
   "calculatorSave": "Сохранить",
