Deleted notes screen; Added presets for splits

--- a/lib/presentation/l10n/app_en.arb
+++ b/lib/presentation/l10n/app_en.arb
@@ -48,6 +48,9 @@
   "calculatorInputKeyboard": "Keyboard",
   "calculatorViewSplits": "View splits",
   "splitsSettingsTitle": "Split settings",
+  "splitsPresets": "Split presets",
+  "splitsPresetsButton": "Presets",
+  "splitsPresetsEmpty": "No presets yet",
   "splitsIntervalTitle": "Split interval",
   "splitsPaceStrategyTitle": "Pace strategy",
   "splitsStartTimeTitle": "Start time",
