--- a/lib/presentation/l10n/app_ru.arb
+++ b/lib/presentation/l10n/app_ru.arb
@@ -48,6 +48,9 @@
   "calculatorInputKeyboard": "Клавиатура",
   "calculatorViewSplits": "Показать сплиты",
   "splitsSettingsTitle": "Настройки сплитов",
+  "splitsPresets": "Пресеты сплитов",
+  "splitsPresetsButton": "Пресеты",
+  "splitsPresetsEmpty": "Пока нет пресетов",
   "splitsIntervalTitle": "Интервал",
   "splitsPaceStrategyTitle": "Стратегия темпа",
   "splitsStartTimeTitle": "Время старта",
